Updted with WatchedList

--- a/popup.html
+++ b/popup.html
@@ -299,7 +299,7 @@
 
 <body>
 	<div class="wrapper">
-		<div class="video">
+		<div id="player" class="video">
 			<div class="lds-ellipsis">
 				<div></div>
 				<div></div>
