--- a/popup.html
+++ b/popup.html
@@ -58,6 +58,7 @@
 		.categories {
 			display: flex;
 			float: left;
+			background-color: var(--dark);
 			/* grid-template-columns: 50px; */
 			/* grid-template-rows: 10px; */
 			/* grid-gap: 4px; */
@@ -357,6 +358,7 @@
 			transition: .4s;
 			line-height: 1;
 			text-align: center;
+			height: 36px;
 		}
 
 		.dropbtn span {
@@ -412,7 +414,7 @@
 
 		/* Change the background color of the dropdown button when the dropdown content is shown */
 		.dropdown:hover .dropbtn {
-			background-color: var(--accent-1);
+			background-color: var(--red-hover);
 			/* padding: 16px; */
 			color: whitesmoke;
 			transition: .4s;
@@ -425,7 +427,7 @@
 		.dropbtn-menu {
 			/* display: grid; */
 			/* grid-template-columns: 1fr 1fr; */
-			/* background-color: rgb(224, 224, 224); */
+			background-color: var(--dark);
 			color: var(--accent-1);
 			padding: 8px;
 			margin: 0;
@@ -450,6 +452,11 @@
 			display: inline-block;
 			margin: auto 0;
 			transition: .4s;
+		}
+
+		.dropdown-menu:hover {
+			color: var(--red-hover);
+			background-color: var(--red-hover);
 		}
 
 		/* Dropdown Content (Hidden by Default) */
@@ -514,7 +521,7 @@
 			text-transform: uppercase;
 			display: grid;
 			grid-template-columns: 1fr;
-			padding: 10px;
+			padding: 10px 40px;
 		}
 
 		.menu-category:hover {
@@ -528,6 +535,11 @@
 
 		.cat-title {
 			margin-bottom: 8px;
+		}
+
+		.cat-title:focus {
+			outline: 0;
+			background-color: #D33232;
 		}
 
 		.add-subreddit {
@@ -579,13 +591,13 @@
 		}
 
 		.tag {
-			background: #eee;
+			background: var(--light);
 			border-radius: 3px;
-			color: #999;
+			color: var(--dark);
 			display: inline-block;
 			height: 26px;
 			line-height: 26px;
-			padding: 0 10px 0 10px;
+			padding: 0 34px 0 10px;
 			position: relative;
 			margin: 0 10px 10px 0;
 			text-decoration: none;
@@ -616,22 +628,25 @@
 		*/
 
 		.tag:hover {
-			background-color: crimson;
+			background-color: var(--gray);
 			color: white;
 		}
 
 		.close {
 			position: absolute;
-			padding-left: 4px;
-			color: black;
-			border-radius: 50%;
-			/* background-color: brown; */
-			height: 20px;
-			width: 20px;
-			align-items: center;
-			justify-content: center;
-			top: -8px;
-			right: -8px;
+			/* padding-left: 4px; */
+			color: var(--light);
+			border-radius: 0 3px 3px 0;
+			background-color: brown;
+			/* height: 20px; */
+			width: 24px;
+			/* align-items: center; */
+			/* justify-content: center; */
+			top: 50%;
+			transform: translateY(-50%);
+			right: 0;
+			text-align: center;
+			font-size: x-large;
 		}
 
 		.close:hover {
@@ -644,6 +659,7 @@
 			display: flex;
 			color: aqua;
 			position: absolute;
+			width: max-content;
 			top: 20px;
 			left: 50%;
 			transform: translateX(-50%);
@@ -674,7 +690,7 @@
 				opacity: 1;
 			}
 		}
-		
+
 		@keyframes moveout {
 			from {
 				top: 20px;
@@ -705,45 +721,170 @@
 			background-color: orange;
 			color: var(--dark);
 		}
+
+		.help {
+			display: grid;
+			grid-template-columns: 2fr 1fr;
+		}
+
+		.help-text {
+			color: white;
+			background-color: rgb(51, 51, 51);
+			padding: 10px;
+			width: max-content;
+			text-align: left;
+			/* position: sticky; */
+			padding: 10px 30px;
+			margin: 0px 40px 10px 40px;
+			position: relative;
+			text-transform: uppercase;
+			font-size: 10px;
+			font-family: sans-serif;
+		}
+
+		.help-text-bar {
+			position: absolute;
+			left: 0;
+			top: 0;
+			width: 6px;
+			height: 100%;
+			background-color: #A91717;
+		}
+
+		.reset-btn {
+			color: var(--light);
+			text-align: center;
+			padding: 4px;
+			background-color: var(--red-hover);
+			width: 60px;
+			height: 32px;
+			cursor: pointer;
+			margin: 0 0 0 60px;
+		}
+
+		.reset-btn:hover {
+			background-color: var(--red);
+			color: black;
+		}
+
+		.dark-veil {
+			visibility: hidden;
+			position: fixed;
+			opacity: 0;
+			height: 40px;
+			width: 100%;
+			background-color: rgba(0, 0, 0, .6);
+			z-index: 20;
+			transition: .2s;
+		}
+
+		.show {
+			visibility: visible;
+			opacity: 1;
+			/* transition: all 1s linear; */
+		}
+
+		.video-info {
+			background: var(--dark);
+			color: white;
+			width: max-content;
+			max-width: 500px;
+			top: 20px;
+			transform: translateX(-94%);
+			position: fixed;
+			padding: 10px 20px;
+			line-height: 1;
+			box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+			transition: .4s ease-in-out;
+			text-transform: uppercase;
+		}
+
+		.video-info.show-info {
+			transform: translateX(0%);
+		}
+
+		.video-info:hover {
+			transform: translateX(0%);
+		}
+
+		.video-title {
+			font-size: 20px;
+		}
+
+		.video-details {
+			margin-top: 10px;
+			color: var(--gray);
+			display: flex;
+		}
+
+		.video-subreddit {
+			padding-right: 30px;
+		}
+
+		.video-upvotes .svg-inline--fa {
+			/* display: inline-block; */
+			/* font-size: inherit; */
+			height: 1em;
+			color: var(--gray);
+			/* overflow: visible; */
+			/* vertical-align: -.125em; */
+			/* color: white; */
+		}
 	</style>
 </head>
 
 <body>
-	<div class="wrapper">
-
-		<div id="player" class="video">
-		</div>
-
-	</div>
-	<div class="footer">
-		<div class="categories">
-		</div>
-		<div class="dropdown">
-			<div class="dropbtn">
-				<span id="timeperiod">WEEKLY</span><span style="font-size: 8px">TOP VIDEOS</span>
-				<!-- <i class="fas fa-angle-up"></i> -->
+	<div class="channel-viewer">
+		<div class="video-info">
+			<!-- <div class="video-title">
+				THIS IS OME INFO ABOUT IT
 			</div>
-			<div class="dropdown-content timeperiod">
-				<span>DAILY</span>
-				<span>WEEKLY</span>
-				<span>MONTHLY</span>
-				<span>YEARLY</span>
-				<span>ALL TIME</span>
+			<div class="video-details">
+				<div class="video-subreddit">
+					ODDLYSATISFYING
+				</div>
+				<div class="video-upvotes">
+					<i class="fas fa-arrow-alt-circle-up"></i>
+					<span>12343232</span>
+				</div>
+			</div> -->
+		</div>
+		<div class="wrapper">
+			<div id="player" class="video">
 			</div>
 		</div>
-		<div class="dropdown-menu">
-			<div class="dropbtn-menu">
-				<i class="fas fa-bars"></i>
+		<div class="footer">
+			<div class="categories">
 			</div>
-			<div class="dropdown-menu-content">
+			<div class="dropdown">
+				<div class="dropbtn">
+					<span id="timeperiod"></span><span style="font-size: 8px">TOP VIDEOS</span>
+					<!-- <i class="fas fa-angle-up"></i> -->
+				</div>
+				<div class="dropdown-content timeperiod">
+					<span>ALL TIME</span>
+					<span>YEARLY</span>
+					<span>MONTHLY</span>
+					<span>WEEKLY</span>
+					<span>DAILY</span>
+				</div>
 			</div>
+			<div class="dropdown-menu">
+				<div class="dropbtn-menu">
+					<i class="fas fa-bars"></i>
+				</div>
+				<div class="dropdown-menu-content">
+					<!-- <div class="help">
+						<div class="help-text">
+							Double-click on a channel name to rename it.
+							<div class="help-text-bar"></div>
+						</div>
+						<div class="reset-btn">RESET</div>
+					</div> -->
+				</div>
+			</div>
+			<div class="dark-veil"></div>
 		</div>
-		<!-- <div class="toast error"> -->
-		<!-- <i class="fas fa-check-circle icon"></i>  -->
-		<!-- <i class="fas fa-exclamation-triangle icon"></i>  -->
-		<!-- <span class="toast-txt">SOME TEXT ABOUT THE SITUATION I GUESS</span> -->
-		<!-- </div> -->
-
 	</div>
 	<script src="popup.js"></script>
 </body>
