--- a/popup.html
+++ b/popup.html
@@ -123,6 +123,12 @@
 				opacity: 0;
 			}
 		}
+		
+		@keyframes fadeOut {
+			from {
+				opacity: 1;
+			}
+		}
 
 		.light-gray {
 			color: gray;
@@ -790,17 +796,43 @@
 			width: max-content;
 			max-width: 500px;
 			top: 20px;
-			transform: translateX(-94%);
+			transform: translateX(-98%);
 			position: fixed;
 			padding: 10px 20px;
+			border-top-right-radius: 4px;
+			border-bottom-right-radius: 4px;
 			line-height: 1;
 			box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
 			transition: .4s ease-in-out;
 			text-transform: uppercase;
+			opacity: 1;
+			transition: all 1s;
+		}
+
+		.video-info a {
+			text-decoration: none;
+			color: white;
+		}
+
+		.video-info:after {
+			content: '';
+			position: absolute;
+			top: 0;
+			right: 0;
+			width: 8px;
+			height: 100%;
+			border-top-right-radius: 4px;
+			border-bottom-right-radius: 4px;
+			background-color:var(--red);
+			opacity: 1;
 		}
 
 		.video-info.show-info {
 			transform: translateX(0%);
+		}
+
+		.hide {
+			opacity: 0;
 		}
 
 		.video-info:hover {
@@ -815,6 +847,10 @@
 			margin-top: 10px;
 			color: var(--gray);
 			display: flex;
+		}
+		
+		.video-details a {
+			color: var(--gray);
 		}
 
 		.video-subreddit {
@@ -885,6 +921,7 @@
 			</div>
 			<div class="dark-veil"></div>
 		</div>
+		
 	</div>
 	<script src="popup.js"></script>
 </body>
