--- a/popup.html
+++ b/popup.html
@@ -6,888 +6,11 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta http-equiv="X-UA-Compatible" content="ie=edge">
 	<link href="https://fonts.googleapis.com/css?family=Abel|Fjalla+One|Oswald|Staatliches" rel="stylesheet">
+	<link rel="stylesheet" href="popup.css">
 	<script defer src="https://use.fontawesome.com/releases/v5.6.3/js/all.js"
 		integrity="sha384-EIHISlAOj4zgYieurP0SdoiBYfGJKkgWedPHH4jCzpCXLmzVsw1ouK59MuUtP4a1"
 		crossorigin="anonymous"></script>
 	<title>Reddit Tube</title>
-	<style>
-		:root {
-			--red: #EB5757;
-			--yellow: rgb(214, 184, 102);
-			--red-hover: #A91717;
-			--red-select: #D33232;
-			--dark: rgb(31, 31, 31);
-			--light: rgb(218, 218, 218);
-			--gray: rgb(148, 148, 148);
-		}
-
-		* {
-			box-sizing: border-box;
-		}
-
-		body {
-			padding: 0;
-			margin: 0;
-			font-family: 'Oswald', sans-serif;
-			background: var(--dark);
-		}
-
-		button {
-			padding: 0;
-			margin: 0;
-			border: 0;
-		}
-
-		.wrapper {
-			background-color: black;
-		}
-
-		#player {
-			overflow: hidden;
-			background: url(noise.gif) repeat center fixed;
-			background-size: cover;
-			/* height: 390px; */
-			/* width: 640px; */
-		}
-
-		.footer {
-			display: grid;
-			grid-template-columns: 1fr 60px 60px;
-		}
-
-		.categories {
-			display: flex;
-			float: left;
-			background-color: var(--dark);
-			/* grid-template-columns: 50px; */
-			/* grid-template-rows: 10px; */
-			/* grid-gap: 4px; */
-			/* background-color: black; */
-			justify-content: center;
-			text-align: center;
-			/* padding-top: .4em; */
-			/* padding-bottom: .4em; */
-			font-size: 10px;
-			/* font-weight: 200; */
-			text-transform: uppercase;
-			overflow-x: scroll;
-			/* width: 100%; */
-			z-index: 2;
-		}
-
-		.categories::-webkit-scrollbar {
-			display: none;
-		}
-
-		.timeperiod {
-			display: block;
-			/* grid-template-columns: repeat(auto-fit, minmax(50px, 1fr)); */
-			/* grid-gap: 2px; */
-			/* background-color: aquamarine; */
-			justify-content: center;
-			text-align: center;
-			text-transform: uppercase;
-			/* padding: .2em; */
-			color: antiquewhite;
-			line-height: 1;
-		}
-
-		.menu {
-			text-align: center;
-		}
-
-		/* .video {
-			width: 560px;
-			height: 315px;
-			color: var(--light);
-		} */
-
-		.video-frame {
-			animation: fadeIn 4s forwards;
-		}
-
-		.loading {
-			display: block;
-			position: absolute;
-			left: 50%;
-			max-width: 300px;
-			bottom: 46%;
-			text-align: center;
-			justify-content: center;
-			transform: translateX(-50%);
-			animation: fadeIn 1s forwards;
-		}
-
-		@keyframes fadeIn {
-			from {
-				opacity: 0;
-			}
-		}
-
-		@keyframes fadeOut {
-			from {
-				opacity: 1;
-			}
-		}
-
-		.light-gray {
-			color: gray;
-		}
-
-		.sort {
-			color: var(--yellow);
-		}
-
-		.button-lg {
-			/* display: flex; */
-			display: none;
-			padding: .4em .8em;
-			background-color: var(--dark);
-			cursor: pointer;
-			font-size: 1.2em;
-			font-weight: 700;
-			transition: all 300ms ease-in-out;
-			color: var(--gray);
-			align-items: center;
-			justify-content: center;
-			animation: fadeIn 1s linear;
-		}
-
-		.clicked {
-			animation: clickripple .4s;
-		}
-
-		@keyframes clickripple {
-			0% {
-				background-color: var(--dark);
-			}
-
-			50% {
-				background-color: var(--red-hover);
-				color: var(--light);
-			}
-
-			100% {
-				background-color: var(--dark);
-			}
-		}
-
-		.button-lg:hover {
-			color: var(--red);
-		}
-
-		.btn-sort {
-			padding: .4em;
-			background-color: rgb(68, 68, 68);
-			cursor: pointer;
-			transition: all 200ms ease-in-out;
-			color: rgb(197, 197, 197)
-		}
-
-		.btn-sort:hover {
-			background-color: var(--red-hover);
-			color: whitesmoke;
-		}
-
-		.svg-inline--fa {
-			display: inline-block;
-			font-size: inherit;
-			height: 1.4em;
-			overflow: visible;
-			vertical-align: -.125em;
-			color: white;
-		}
-
-		.svg-inline--fa.fa-w-14 {
-			width: 1em;
-		}
-
-		.btn-menu {
-			background-color: var(--red-hover);
-			display: flex;
-			align-items: center;
-			justify-content: center;
-		}
-
-		.selected {
-			/* background-color: var(--red-select); */
-			color: var(--red);
-		}
-
-		/* Loading Spinner */
-		.lds-ellipsis {
-			display: block;
-			position: absolute;
-			width: 64px;
-			height: 64px;
-			left: 50%;
-			top: 50%;
-			transform: translateY(-50%);
-			transform: translateX(-50%);
-		}
-
-		.lds-ellipsis div {
-			position: absolute;
-			top: 27px;
-			width: 11px;
-			height: 11px;
-			border-radius: 50%;
-			background: var(--red);
-			animation-timing-function: cubic-bezier(0, 1, 1, 0);
-		}
-
-		.lds-ellipsis div:nth-child(1) {
-			left: 6px;
-			animation: lds-ellipsis1 0.6s infinite;
-		}
-
-		.lds-ellipsis div:nth-child(2) {
-			left: 6px;
-			animation: lds-ellipsis2 0.6s infinite;
-		}
-
-		.lds-ellipsis div:nth-child(3) {
-			left: 26px;
-			animation: lds-ellipsis2 0.6s infinite;
-		}
-
-		.lds-ellipsis div:nth-child(4) {
-			left: 45px;
-			animation: lds-ellipsis3 0.6s infinite;
-		}
-
-		@keyframes lds-ellipsis1 {
-			0% {
-				transform: scale(0);
-			}
-
-			100% {
-				transform: scale(1);
-			}
-		}
-
-		@keyframes lds-ellipsis3 {
-			0% {
-				transform: scale(1);
-			}
-
-			100% {
-				transform: scale(0);
-			}
-		}
-
-		@keyframes lds-ellipsis2 {
-			0% {
-				transform: translate(0, 0);
-			}
-
-			100% {
-				transform: translate(19px, 0);
-			}
-		}
-
-		#add-modal {
-			display: none;
-			position: absolute;
-			padding: 1em;
-			height: 100%;
-			right: 0;
-			width: 100%;
-			top: 0;
-			color: whitesmoke;
-			background-color: rgba(0, 0, 0, 0.5);
-			transform-origin: bottom;
-		}
-
-		input {
-			width: 90%;
-			padding: .2em;
-			border: 1px solid var(--red-select);
-		}
-
-		/* Popup container */
-		.popup {
-			position: relative;
-			display: inline-block;
-			cursor: pointer;
-		}
-
-		/* The actual popup (appears on top) */
-		.popup .popuptext {
-			visibility: hidden;
-			width: 160px;
-			background-color: #555;
-			color: #fff;
-			text-align: center;
-			border-radius: 6px;
-			padding: 8px 0;
-			position: absolute;
-			z-index: 1;
-			bottom: 125%;
-			left: 50%;
-			margin-left: -80px;
-		}
-
-		/* Popup arrow */
-		.popup .popuptext::after {
-			content: "";
-			position: absolute;
-			top: 100%;
-			left: 50%;
-			margin-left: -5px;
-			border-width: 5px;
-			border-style: solid;
-			border-color: #555 transparent transparent transparent;
-		}
-
-		/* Toggle this class when clicking on the popup container (hide and show the popup) */
-		/* .popup .show {
-			visibility: visible;
-			-webkit-animation: fadeIn 1s;
-			animation: fadeIn 1s
-		} */
-
-		/* Add animation (fade in the popup) */
-		@-webkit-keyframes fadeIn {
-			from {
-				opacity: 0;
-			}
-
-			to {
-				opacity: 1;
-			}
-		}
-
-		@keyframes fadeIn {
-			from {
-				opacity: 0;
-			}
-
-			to {
-				opacity: 1;
-			}
-		}
-
-		/* DROPDOWN - START */
-		/* Style The Dropdown Button */
-		.dropbtn {
-			/* display: grid; */
-			/* grid-template-columns: 1fr 1fr; */
-			background-color: rgb(224, 224, 224);
-			color: var(--accent-1);
-			padding: 8px;
-			/* margin-left: 10px; */
-			/* font-size: 16px; */
-			justify-content: center;
-			align-items: center;
-			border: none;
-			cursor: pointer;
-			transition: .4s;
-			line-height: 1;
-			text-align: center;
-			height: 36px;
-		}
-
-		.dropbtn span {
-			/* padding-right: 4px; */
-			display: block;
-		}
-
-		/* The container <div> - needed to position the dropdown content */
-		.dropdown {
-			/* position: relative; */
-			display: inline-block;
-			margin: auto 0;
-			transition: .4s;
-			z-index: 2;
-		}
-
-		/* Dropdown Content (Hidden by Default) */
-		.dropdown-content {
-			display: none;
-			position: absolute;
-			background-color: rgba(0, 0, 0, 0.9);
-			/* min-width: 60px; */
-			box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-			z-index: 1;
-			transition: .4s;
-			right: 61px;
-			bottom: 36px;
-			text-align: center;
-			cursor: pointer;
-		}
-
-		/* Links inside the dropdown */
-		.dropdown-content span {
-			background-color: var(--accent-1);
-			color: whitesmoke;
-			font-family: 'Oswald', sans-serif;
-			padding: 6px 8px;
-			text-decoration: none;
-			display: block;
-			cursor: pointer;
-		}
-
-		/* Change color of dropdown links on hover */
-		.dropdown-content span:hover {
-			color: var(--red);
-		}
-
-		/* Show the dropdown menu on hover */
-		.dropdown:hover .dropdown-content {
-			display: block;
-			transition: .4s;
-		}
-
-		/* Change the background color of the dropdown button when the dropdown content is shown */
-		.dropdown:hover .dropbtn {
-			background-color: var(--red-hover);
-			/* padding: 16px; */
-			color: whitesmoke;
-			transition: .4s;
-		}
-
-		/* DROPDOWN - END */
-
-		/* DROPDOWN - MENU - START */
-		/* Style The Dropdown Button */
-		.dropbtn-menu {
-			/* display: grid; */
-			/* grid-template-columns: 1fr 1fr; */
-			background-color: var(--dark);
-			color: var(--accent-1);
-			padding: 8px;
-			margin: 0;
-			font-size: 14px;
-			justify-content: center;
-			align-items: center;
-			border: none;
-			cursor: pointer;
-			transition: .4s;
-			line-height: 1;
-			text-align: center;
-		}
-
-		.dropbtn-menu span {
-			/* padding-right: 4px; */
-			display: block;
-		}
-
-		/* The container <div> - needed to position the dropdown content */
-		.dropdown-menu {
-			/* position: relative; */
-			display: inline-block;
-			margin: auto 0;
-			transition: .4s;
-		}
-
-		.dropdown-menu:hover {
-			color: var(--red-hover);
-			background-color: var(--red-hover);
-		}
-
-		/* Dropdown Content (Hidden by Default) */
-		.dropdown-menu-content {
-			display: block;
-			position: absolute;
-			background-color: rgba(0, 0, 0, 0.9);
-			/* min-width: 60px; */
-			box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-			z-index: 1;
-			transition: .6s;
-			height: 0%;
-			width: 100%;
-			left: 0;
-			bottom: -136px;
-			margin-top: 20px;
-			padding: 40px;
-			font-size: 15px;
-			/* text-align: center; */
-			/* align-items: center; */
-			/* justify-content: center; */
-			overflow-x: scroll;
-		}
-
-		/* Links inside the dropdown */
-		.dropdown-menu-content a {
-			background-color: var(--accent-1);
-			color: whitesmoke;
-			font-family: 'Oswald', sans-serif;
-			padding: 6px 8px;
-			text-decoration: none;
-			display: block;
-		}
-
-		/* Change color of dropdown links on hover */
-		.dropdown-menu-content a:hover {
-			background-color: var(--darker-gray);
-		}
-
-		/* Show the dropdown menu on hover */
-		.dropdown-menu:hover .dropdown-menu-content {
-			display: block;
-			height: 90%;
-			width: 100%;
-			transition: .4s;
-			bottom: 36px;
-			/* padding: 40px; */
-		}
-
-		/* Change the background color of the dropdown button when the dropdown content is shown */
-		.dropdown-menu:hover .dropbtn-menu {
-			background-color: var(--accent-1);
-			/* padding: 16px; */
-			color: whitesmoke;
-			transition: .4s;
-		}
-
-		/* DROPDOWN - END */
-
-		.menu-category {
-			color: #fff;
-			text-transform: uppercase;
-			display: grid;
-			grid-template-columns: 1fr;
-			padding: 10px 40px;
-		}
-
-		.menu-category:hover {
-			background-color: rgba(153, 153, 153, 0.356);
-		}
-
-		.cat-header {
-			display: flex;
-			/* margin-bottom: 8px; */
-		}
-
-		.cat-title {
-			margin-bottom: 8px;
-		}
-
-		.cat-title:focus {
-			outline: 0;
-			background-color: #D33232;
-		}
-
-		.add-subreddit {
-			display: none;
-			margin: 0 10px;
-			/* background-color: brown; */
-			font-size: 12px;
-			height: 20px;
-			padding: 1px 4px;
-			align-items: center;
-			cursor: pointer;
-			transition: 2s;
-		}
-
-		.input-txt {
-			display: flex;
-			width: 140px;
-			height: 22px;
-		}
-
-		.btn-plus {
-			display: block;
-			width: 20px;
-			height: 21px;
-			background-color: var(--red);
-			text-align: center;
-			padding: 3px;
-		}
-
-		.menu-category:hover .add-subreddit {
-			display: flex;
-		}
-
-		.cat-subreddits {
-			display: grid;
-			grid-gap: 10px;
-			grid-template-columns: repeat(auto-fill, minmax(60px, 1fr));
-		}
-
-		.tags {
-			list-style: none;
-			margin: 0;
-			overflow: hidden;
-			padding: 0;
-		}
-
-		.tags li {
-			float: left;
-		}
-
-		.tag {
-			background: var(--light);
-			border-radius: 3px;
-			color: var(--dark);
-			display: inline-block;
-			height: 26px;
-			line-height: 26px;
-			padding: 0 34px 0 10px;
-			position: relative;
-			margin: 0 10px 10px 0;
-			text-decoration: none;
-		}
-
-		/* .tag::before {
-			background: #fff;
-			border-radius: 10px;
-			box-shadow: inset 0 1px rgba(0, 0, 0, 0.25);
-			content: '';
-			height: 6px;
-			left: 10px;
-			position: absolute;
-			width: 6px;
-			top: 10px;
-		}
-
-		.tag::after {
-			background: #fff;
-			border-bottom: 13px solid transparent;
-			border-left: 10px solid #eee;
-			border-top: 13px solid transparent;
-			content: 'X';
-			position: absolute;
-			right: 0;
-			top: 0;
-		}
-		*/
-
-		.tag:hover {
-			background-color: var(--gray);
-			color: white;
-		}
-
-		.close {
-			position: absolute;
-			/* padding-left: 4px; */
-			color: var(--light);
-			border-radius: 0 3px 3px 0;
-			background-color: brown;
-			/* height: 20px; */
-			width: 24px;
-			/* align-items: center; */
-			/* justify-content: center; */
-			top: 50%;
-			transform: translateY(-50%);
-			right: 0;
-			text-align: center;
-			font-size: x-large;
-		}
-
-		.close:hover {
-			color: white;
-			cursor: pointer;
-		}
-
-		.toast {
-			visibility: hidden;
-			display: flex;
-			color: aqua;
-			position: absolute;
-			width: max-content;
-			top: 20px;
-			left: 50%;
-			transform: translateX(-50%);
-			background-color: cadetblue;
-			padding: 6px 20px 8px;
-			align-items: center;
-			z-index: 200;
-		}
-
-		.toast.show {
-			visibility: visible;
-			/* Show the snackbar */
-			/* Add animation: Take 0.5 seconds to fade in and out the snackbar. 
-  However, delay the fade out process for 2.5 seconds */
-			/* -webkit-animation: movein 0.5s, moveout 0.5s 2.5s; */
-			animation: movein 0.5s, moveout 0.5s 5s;
-			/* animation: movein 0.5s; */
-		}
-
-		@keyframes movein {
-			from {
-				top: 0;
-				opacity: 0;
-			}
-
-			to {
-				top: 20px;
-				opacity: 1;
-			}
-		}
-
-		@keyframes moveout {
-			from {
-				top: 20px;
-				opacity: 1;
-			}
-
-			to {
-				top: 0;
-				opacity: 0;
-			}
-		}
-
-		.icon {
-			color: var(--dark);
-		}
-
-		.toast-txt {
-			margin: 0 5px;
-			text-transform: uppercase;
-		}
-
-		.success {
-			background-color: lightgreen;
-			color: var(--dark);
-		}
-
-		.error {
-			background-color: orange;
-			color: var(--dark);
-		}
-
-		.help {
-			display: grid;
-			grid-template-columns: 2fr 1fr;
-		}
-
-		.help-text {
-			color: white;
-			background-color: rgb(51, 51, 51);
-			padding: 10px;
-			width: max-content;
-			text-align: left;
-			/* position: sticky; */
-			padding: 10px 30px;
-			margin: 0px 40px 10px 40px;
-			position: relative;
-			text-transform: uppercase;
-			font-size: 10px;
-			font-family: sans-serif;
-		}
-
-		.help-text-bar {
-			position: absolute;
-			left: 0;
-			top: 0;
-			width: 6px;
-			height: 100%;
-			background-color: #A91717;
-		}
-
-		.reset-btn {
-			color: var(--light);
-			text-align: center;
-			padding: 4px;
-			background-color: var(--red-hover);
-			width: 60px;
-			height: 32px;
-			cursor: pointer;
-			margin: 0 0 0 60px;
-		}
-
-		.reset-btn:hover {
-			background-color: var(--red);
-			color: black;
-		}
-
-		.dark-veil {
-			visibility: hidden;
-			position: fixed;
-			opacity: 0;
-			height: 40px;
-			width: 100%;
-			background-color: rgba(0, 0, 0, .6);
-			z-index: 20;
-			transition: .2s;
-		}
-
-		.show {
-			visibility: visible;
-			opacity: 1;
-			/* transition: all 1s linear; */
-		}
-
-		.video-info {
-			background: var(--dark);
-			color: white;
-			width: max-content;
-			max-width: 500px;
-			top: 20px;
-			transform: translateX(-98%);
-			position: fixed;
-			padding: 10px 20px;
-			border-top-right-radius: 4px;
-			border-bottom-right-radius: 4px;
-			line-height: 1;
-			box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
-			transition: .4s ease-in-out;
-			text-transform: uppercase;
-			opacity: 1;
-			transition: all 1s;
-		}
-
-		.video-info a {
-			text-decoration: none;
-			color: white;
-		}
-
-		.video-info:after {
-			content: '';
-			position: absolute;
-			top: 0;
-			right: 0;
-			width: 8px;
-			height: 100%;
-			border-top-right-radius: 4px;
-			border-bottom-right-radius: 4px;
-			background-color: var(--red);
-			opacity: 1;
-		}
-
-		.video-info.show-info {
-			transform: translateX(0%);
-		}
-
-		.hide {
-			opacity: 0;
-		}
-
-		.video-info:hover {
-			transform: translateX(0%);
-		}
-
-		.video-title {
-			font-size: 20px;
-		}
-
-		.video-details {
-			margin-top: 10px;
-			color: var(--gray);
-			display: flex;
-		}
-
-		.video-details a {
-			color: var(--gray);
-		}
-
-		.video-subreddit {
-			padding-right: 30px;
-		}
-
-		.video-upvotes .svg-inline--fa {
-			/* display: inline-block; */
-			/* font-size: inherit; */
-			height: 1em;
-			color: var(--gray);
-			/* overflow: visible; */
-			/* vertical-align: -.125em; */
-			/* color: white; */
-		}
-	</style>
 </head>
 
 <body>
@@ -895,19 +18,20 @@
 		<div class="video-info">
 		</div>
 		<div class="wrapper">
+			<div class="noise"></div>
 			<div id="player" class="video">
 			</div>
 		</div>
 		<div class="footer">
-			<div class="categories">
+			<div class="channels">
 			</div>
-			<div class="dropdown">
-				<div class="dropbtn">
+			<div class="dropdown-sort">
+				<div class="dropdown-sort-btn">
 					<span id="timeperiod" style="height: 12px;"></span>
 					<span style="font-size: 8px">TOP VIDEOS</span>
 					<!-- <i class="fas fa-angle-up"></i> -->
 				</div>
-				<div class="dropdown-content timeperiod">
+				<div class="dropdown-sort-content timeperiod">
 					<span>ALL TIME</span>
 					<span>YEARLY</span>
 					<span>MONTHLY</span>
@@ -916,17 +40,10 @@
 				</div>
 			</div>
 			<div class="dropdown-menu">
-				<div class="dropbtn-menu">
-					<i class="fas fa-bars"></i>
-				</div>
 				<div class="dropdown-menu-content">
-					<!-- <div class="help">
-						<div class="help-text">
-							Double-click on a channel name to rename it.
-							<div class="help-text-bar"></div>
-						</div>
-						<div class="reset-btn">RESET</div>
-					</div> -->
+				</div>
+				<div class="dropdown-menu-btn">
+					<i class="fas fa-bars"></i>
 				</div>
 			</div>
 			<div class="dark-veil"></div>
